--- a/frontend-mod4/src/styles/card.css
+++ b/frontend-mod4/src/styles/card.css
@@ -15,6 +15,11 @@
     cursor: pointer;
 }
 
+.card--full{
+    width: calc(100% - 1em - 1em - .5em - .5em - .25em);
+
+}
+
 .card__title h1 {
     margin: 0;
     padding-bottom: .5em;
