--- a/frontend-mod4/src/components/Header/Header.css
+++ b/frontend-mod4/src/components/Header/Header.css
@@ -1,25 +1,31 @@
-.header{
-    background-color: #1a7431;
-    height: 4em;
-    padding: 1em;
-    width: 100vw;
+.header {
+    align-items: center;
+    background: #099870;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    min-height: 4em;
+    padding: 1em;
+    width: 100vw;
 }
 
-.header__logo{
+.header__logo {
     width: 10em;
-    border-radius: .5em;
+    border-radius: 0.5em;
 }
 
-.header a{
-    text-decoration: none;
-    font-size: 1.5rem;
+.header a {
     color: white;
+    font-size: 1.5rem;
+    text-decoration: none;
     transition: transform 0.1s ease-in;
 }
 
-.header a:hover{
+.header a:hover {
     transform: scale(1.1);
+}
+
+@media only screen and (max-width: 360px) {
+    .header {
+        flex-direction: column;
+    }
 }
